.gitignore file changed. IDEA specific files added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,26 @@
 *.tar.gz
 *.rar
 
+*~
+*.#*
+*#*#
+*.swp
+*.ipr
+*.iml
+*.iws
+*.pyc
+*.pyo
+.idea/
+.idea_modules/
+.settings
+.cache
+target/
+store/CSDK/cmake-build-debug/*
+.project
+.classpath
+metastore_db/
+derby.log
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
